--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "5.0.1",
     "sass": "^1.51.0",
     "swiper": "^8.1.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
