--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.12",
     "sass": "^1.51.0",
     "swiper": "^8.1.5",
     "web-vitals": "^2.1.4",
