--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     ]
   },
   "devDependencies": {
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "laravel-echo": "^1.14.0",
+    "pusher-js": "^7.4.0"
   }
 }
