--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "material-ui-confirm": "^3.0.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-idle-timer": "^5.4.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-lazy-load-image-component": "^1.5.5",
     "react-router-dom": "^6.3.0",
